# vga-system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  DEVIATION_LOG.md  MASTER_PROMPT_INDEX.md  Makefile  comfyui_vga_pipeline.json  download_models.py  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt  setup_comfyui_pod.sh  setup_pod.sh
prompt_file/: 00_BOOTSTRAP_ENVIRONMENT_PROMPT.md  01_PROJECT_SKELETON_PROMPT.md  02_CORE_FOUNDATION_PROMPT.md  03_IMMUTABLE_CONTEXT_SYSTEM_PROMPT.md  04_MODEL_MANAGER_PROMPT.md  05_MASTER_ORCHESTRATOR_PROMPT.md  06_SLA_ADAPTIVE_GATING_PROMPT.md  07_VALIDATION_INFRASTRUCTURE_PROMPT.md  08_IDENTITY_SYSTEM_PROMPT.md  09_MODEL_WRAPPERS_PROMPT.md  10_NARRATIVE_AGENTS_PROMPT.md  11_IMAGE_PIPELINE_AGENTS_PROMPT.md  12_TEMPORAL_ENGINE_PROMPT.md  13_AUDIO_PIPELINE_PROMPT.md  14_EXPORT_QUALITY_PROMPT.md  15_FASTAPI_LAYER_PROMPT.md  16_STREAMLIT_UI_PROMPT.md  17_SESSION_CONTROLLER_PROMPT.md  18_CLIENT_WATCHER_PROMPT.md  19_TEST_SUITE_PROMPT.md  20_DEVTOOLS_PROMPT.md
scripts/: convert_fp8.py  diag_image_quality.py  download_test_outputs.py  run_pipeline.py  test_image_video.py  test_minimal_bootstrap.py  test_pipeline.py  vga_svi_inference.py  vga_svi_server.py
system_files/: 01_VGA_System_Requirements_Document.md  02_VGA_System_Architecture_Document.md  03_VGA_Mathematical_Model_Specification.md  04_VGA_Pipeline_Execution_Flow_Specification.md  05_VGA_Data_Contracts_Interface_Specification.md  06_VGA_Engine_Template_Specification.md  07_VGA_Codebase_Structure_Design.md  08_VGA_Dependency_Graph_Specification.md  09_VGA_File_Responsibility_Specification.md  (+9 more)
(+173 files in other folders)
