[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "vga"
version = "17.2.0"
description = "Video Generation Automation — Cinematic AI Motivation Pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision",
    "torchaudio>=2.5.1",
    "diffusers>=0.30.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "peft>=0.12.0",
    "safetensors>=0.8.0rc0",
    "open-clip-torch>=2.24.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.9.0.80",
    "pydub>=0.25.0",
    "ffmpeg-python>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.30.0",
    "scipy",
    "omegaconf",
    "einops",
    "mediapipe",
    "face-alignment",
    "decord",
    "soundfile",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "audiocraft",
    "sentencepiece",
    "protobuf>=3.20.0,<5.0.0",
    "unsloth",
    "bitsandbytes",
    "paramiko",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vga*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
